--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   flutter_spinkit:
+  font_awesome_flutter: # Gallery
 
 dev_dependencies:
   flutter_test:
