--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^3.0.10 #Http client 
   cupertino_icons: ^1.0.0
   flutter_spinkit:
   font_awesome_flutter: # Gallery
+  shared_preferences: 
 
 dev_dependencies:
   flutter_test:
