--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_screenutil: ^3.1.1
+  google_maps_flutter: ^1.0.3
   carousel_slider: ^2.2.1
-  flutter_spinkit: ^4.1.2+1
+
   dio:
+  provider: ^3.1.0
 
   intl:
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,9 +38,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   #Images
-  #   - assets/images/home_ilustration.png
+  assets:
+    - assets/images/home_ilustration.png
   #   - assets/images/banner_placeholder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
