--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/home_ilustration.png
+    - assets/icons/maki_doctor-11.png
   #   - assets/images/banner_placeholder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -53,17 +54,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: assets/fonts/raleway/Raleway-Regular.ttf
+        - asset: assets/fonts/raleway/Raleway-Light.ttf
+          weight: 300
+        - asset: assets/fonts/raleway/Raleway-SemiBold.ttf
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/poppins/Poppins-Light.ttf
+          weight: 300
+        - asset: assets/fonts/poppins/Poppins-SemiBold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
