ini versi auth 1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
 
   intl:
   url_launcher:
+  shared_preferences:
+
+  image_picker:
+  path_provider:
 
 
   # The following adds the Cupertino Icons font to your application.
