--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_spinkit:
   font_awesome_flutter: # Gallery
   shared_preferences: 
+  flutter_dialogflow: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +26,5 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/key/kp-likvcc-55d8760cde3e.json
