--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
 
   image_picker:
   path_provider:
+  draggable_floating_button: 
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_spinkit:
   font_awesome_flutter: # Gallery
+  flutter_dialogflow: ^0.1.3
 
 dev_dependencies:
   flutter_test:
